--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
     "ethereumjs-block": "2.2.2",
     "ethereumjs-common": "1.5.0",
     "ethereumjs-tx": "2.1.2",
-    "ethereumjs-util": "6.2.1",
-    "ethereumjs-vm": "4.2.0",
-    "ethereumjs-wallet": "0.6.5",
+    "ethereumjs-util": "6.2.0",
+    "ethereumjs-vm": "https://github.com/martinetlee/ethereumjs-vm#HTM-vm",
     "heap": "0.2.6",
     "keccak": "3.0.1",
     "level-sublevel": "6.6.4",
