--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ethereumjs-common": "1.5.0",
     "ethereumjs-tx": "2.1.2",
     "ethereumjs-util": "6.2.0",
-    "ethereumjs-vm": "https://github.com/martinetlee/ethereumjs-vm#HTM-vm",
+    "ethereumjs-vm": "4.1.3",
     "heap": "0.2.6",
     "keccak": "3.0.1",
     "level-sublevel": "6.6.4",
